# SkyblockFlipper

./: .gitignore  LICENSE.txt  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: main.yml  rust-clippy.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/auctions/: constants.rs  fetcher.rs  handler.rs  items.rs  names.rs
src-tauri/src/utils/: config.rs  frontend.rs  functions.rs
src/lib/: constants.ts  types.ts  utils.ts
src/lib/components/: ActionButtons.svelte  Auction.svelte  Column.svelte  Loadingbar.svelte  Setting.svelte  Spinner.svelte
src/lib/constants/: rarity.ts  sorting.ts
src/lib/stores/: Auctions.ts  Config.ts
src/lib/utils/: auctions.ts  formatting.ts  tauri.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
